--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "sass": "^1.55.0"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^8.0.7",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
+    "cypress": "^11.2.0",
+    "cypress-slow-down": "^1.2.1",
     "eslint": "^8.27.0",
     "eslint-plugin-react": "^7.31.10",
     "vite": "^3.1.0"
